--- a/.github/workflows/check_workflow.yml
+++ b/.github/workflows/check_workflow.yml
@@ -13,9 +13,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
-      - name: Install and build
-        run: npm install && npm run build 
+      - name: Install 
+        run: npm install 
 
       - name: Check
-        run: check
+        run: npm run check
 
