--- a/.github/workflows/check_workflow.yml
+++ b/.github/workflows/check_workflow.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Install 
-        run: npm install 
+        run: npm install --force
 
       - name: Check
         run: npm run check
