--- a/.github/workflows/deploy_workflow.yml
+++ b/.github/workflows/deploy_workflow.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name : Install and build
-        run: npm install && npm run build
+        run: npm install --force && npm run build
 
       - name: Deploy  
         uses: JamesIves/github-pages-deploy-action@v4
