--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -25,7 +24,10 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "check": "tsc --noEmit",
-    "prepare": "husky"
+    "prepare": "husky",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
+    "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx ."
+    
   },
   "eslintConfig": {
     "extends": [
@@ -46,7 +48,11 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "eslint": "^8.56.0",
     "gh-pages": "^6.1.1",
-    "husky": "^9.0.6"
+    "husky": "^9.0.6",
+    "typescript": "^5.3.3"
   }
 }
